<resources>
    <string name="app_name">bozen sdkDemo</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="gpio_textview">GPIOTEST</string>
    <string name="title_item_gpio">GPIO Demo</string>
    <string name="gpio_port_value_tx">GPIO Port Value</string>
    <string name="gpio_port_output_tx">GPIO Output Value</string>
    <string name="gpio_output_high">High</string>
    <string name="gpio_output_low">Low</string>
    <string name="gpio_test_start">WRITE</string>
    <string name="gpio_test_read">READ</string>
    <string name="gpio_current_state_tx">Gpio State</string>
    <string name="title_item_wiegand">Wiegand Demo</string>
    <string name="wiegand_demo_title">Wiegand Test</string>
    <string name="wiegand26_tst_turn_on">Wiegand26</string>
    <string name="wiegand32_tst_turn_on">Wiegand32</string>
    <string name="wiegand34_tst_turn_on">Wiegand34</string>
    <string name="wiegand44_tst_turn_on">Wiegand44</string>
    <string name="wiegand46_tst_turn_on">Wiegand46</string>
    <string name="wiegand_tst_send">Send </string>
    <string name="wgnd_hid_tx">HID </string>
    <string name="wgnd_pid_tx">PID </string>
    <string name="uart_and_rs485">UART and RS485 Demo</string>
    <string name="title_item_uart">UART Demo</string>
    <string name="title_item_rs485">RS485 Demo</string>
    <string name="uart_rate_type"> RATE: </string>
    <string name="uart_or_rs485_type"> UART or RS485: </string>
    <string name="uart_type"> UART </string>
    <string name="rs485_type"> RS485 </string>
    <string name="uart_send_data_tx"> Uart Send Data: </string>
    <string name="uart_send_txt">SEND</string>
    <string name="uart_recieve_txt">RECIEVE</string>
    <string name="uart_port_tx"> Uart Port: </string>
    <string name="title_item_otg">OTG Power Demo</string>
    <string name="otg_power_enbale">OTG Enable</string>
    <string name="otg_power_disable">OTG Disable</string>
    <string name="title_item_infrared_distance">Infrared Distance Demo</string>
    <string name="infrared_light_demo">Infrared Light Demo</string>
    <string name="infra_test_start"> Start </string>
    <string name="infra_test_stop"> Stop </string>
    <string name="infra_device_gpio_tx">Sensor Used Gpio</string>
    <string name="infra_distance_state_tx">Distance state</string>    
    <string name="title_item_lights">Lights Demo</string>
    <string name="light_fillin_enbale">Enable</string>
    <string name="light_fillin_disable">Disable</string>
    <string name="uart_test_stop">STOP</string>
    <string name="brightness_level">Brightness Level:</string>
    <string name="auxlight">aux_light</string>
    <string name="lcdbl">lcd backlight</string>
    <string name="Printer_Test">Printer Demo</string>
    <string name="connect_usb_printer_device">Connect Printer</string>
    <string name="disconnect_usb_printer_device">Disconnect Printer</string>
    <string name="toPrint">Print</string>
    <string name="cut_paper">cut paper</string>
    <string name="title_item_psam">PSAM 演示</string>
    <string name="title_item_digitaltube">数码管演示</string>
    <string name="title_item_nfc">NFC演示</string>
    <string name="title_item_barcode_scan">条码扫码演示</string>
    <string name="title_item_camera">摄像头测试</string>
    <string name="title_item_printer">打印机测试</string>
</resources>
