<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/fillin_light_state_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/edittext_background"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold"></TextView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/checkBox_ledbl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/auxlight" />

        <CheckBox
            android:id="@+id/checkBox_lcdbl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/lcdbl" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:text="@string/brightness_level" />

        <SeekBar
            android:id="@+id/Light_seekBar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:max="255"
            android:maxHeight="100dp"
            android:minHeight="60dp"
            android:scrollbarSize="20dp" />

    </LinearLayout>
</LinearLayout>
